Added some movement methods
Next step: more action methods... like for eating and whatnot